Fixing bug 264442. Don't assume we don't have a plugin for an embed until we get the mimetype from the network. r+sr=bzbarsky@mit.edu, a=asa@mozilla.org